# Roblox-mcp

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.github/workflows/: build.yml  commit-artifacts.yml
docs/: development_ideas.md  search_creator_store.md
plugin/src/: Types.luau  Util.luau
plugin/src/Tools/: Context.luau  Creation.luau  Hierarchy.luau  InsertAssets.luau  InsertModel.luau  Properties.luau  RunCommand.luau  Scripts.luau  Search.luau
src/: install.rs  rbx_studio_server.rs
