[package]
name = "rbx-studio-mcp"
version = "0.2.0"
edition = "2021"
authors = ["TheLorianOMG"]
description = "Model Context Protocol server for Roblox Studio - Control Studio with AI"
repository = "https://github.com/TheLorianOMG/Roblox-mcp"
homepage = "https://github.com/TheLorianOMG/Roblox-mcp"
publish = false
license = "MIT"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
color-eyre = "0.6"
clap = { version = "4.5.37", features = ["derive"] }
roblox_install = "1.0.0"
scraper = "0.22.0"
urlencoding = "2.1"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
native-dialog = "0.8.8"
security-translocate = "0.2.1"
core-foundation = "0.10.0"

[build-dependencies]
rojo = "7.4.4"

[package.metadata.bundle]
name = "RobloxStudioMCP"
description = "Model Context Protocol server for Roblox Studio"
identifier = "com.rbx-mcp.server"
